public/css/main.css
/*fork me on GitHub*/
#forkongithub a{background:#dd4814;color:#fff;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#forkongithub a:hover{background:orange;color:#fff;}#forkongithub a::before,#forkongithub a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#forkongithub a::after{bottom:1px;top:auto;}@media screen and (min-width:1333px){#forkongithub{position:absolute;display:block;top:0;left:0;width:200px;overflow:hidden;height:200px;z-index:9999;}#forkongithub a{width:200px;position:absolute;top:30px;left:-45px;transform:rotate(315deg);-webkit-transform:rotate(315deg);-ms-transform:rotate(315deg);-moz-transform:rotate(315deg);-o-transform:rotate(315deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}
/*gitter button*/
.gitter-open-chat-button{background-color:#dd4814;bottom:36px}
.btn {font-size: inherit;    padding: 0px 0px;}
.dropdown-menu > li > a, .btn:hover, .btn:focus, .btn.focus {color:#dd4814}
.dropdown-menu{ min-width: 0px; }
ul.dropdown-menu > li { float: left; }

